# MakingFullStackKABANAwithAI

./: .env.example  Dockerfile  README.md  docker-compose.yml  kanban.db  tmp_fetch_html.py  tmp_search_chat.py
backend/: README.md  ai.py  database.py  kanban.db  main.py  models.py  pyproject.toml  schemas.py  test_kanban.db
backend/static/: __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
backend/static/_next/static/chunks/: 35231e6e591c5180.js  3be73280f7b3e389.css  489c4746b538f82e.js  49321711cb3d744e.js  5cdc45ed6ccc8742.css  66994c842449691a.js  6cf1f5d5e3beeec2.css  710170cd4c403a6d.css  b78c86bc041953af.css  dea9ca5bb4cf75cb.js  eff910589da8aecb.css
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt  index.html
backend/static/_not-found/__next._not-found/: __PAGE__.txt
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_cards.py  test_columns.py
docs/: DATABASE.md  PLAN.md  database-schema.json
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  LoginForm.tsx
frontend/src/lib/: api.ts
frontend/test-results/kanban-adds-a-card-to-a-column-chromium/: error-context.md
frontend/tests/: kanban.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
